testdata/baselines/reference/submodule/conformance/nestedDestructuringOfRequire.errors.txt
main.js(3,13): error TS2307: Cannot find module './mod1' or its corresponding type declarations.
main.js(5,1): error TS2304: Cannot find name 'chalk'.


==== main.js (2 errors) ====
    const {
        chalk: { grey }
    } = require('./mod1');
                ~~~~~~~~
!!! error TS2307: Cannot find module './mod1' or its corresponding type declarations.
    grey
    chalk
    ~~~~~
!!! error TS2304: Cannot find name 'chalk'.
    
==== mod1.js (0 errors) ====
    const chalk = {
        grey: {}
    };
    module.exports.chalk = chalk
    